[gd_scene load_steps=2 format=3 uid="uid://ascension_ui001"]

[ext_resource type="Script" path="res://scripts/ui/ascension_ui.gd" id="1_script"]

[node name="AscensionUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Dimmer" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -280.0
offset_right = 350.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "‚¨ÜÔ∏è Ascension"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Select 3 matching statues to combine them into 1 upgraded statue"
horizontal_alignment = 1

[node name="SlotsContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Slot1" type="PanelContainer" parent="Control/Panel/MarginContainer/VBoxContainer/SlotsContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 0

[node name="Slot2" type="PanelContainer" parent="Control/Panel/MarginContainer/VBoxContainer/SlotsContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 0

[node name="Slot3" type="PanelContainer" parent="Control/Panel/MarginContainer/VBoxContainer/SlotsContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 0

[node name="Arrow" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚¨áÔ∏è"
horizontal_alignment = 1

[node name="ResultContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 4

[node name="ResultIcon" type="TextureRect" parent="Control/Panel/MarginContainer/VBoxContainer/ResultContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="ResultLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/ResultContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
text = "‚Üí Enhanced Statue"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Select 3 matching statues from your inventory"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "üì¶ Your Statues:"

[node name="InventoryScroll" type="ScrollContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 2

[node name="InventoryGrid" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/InventoryScroll"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="ButtonsContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="CancelButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "‚ùå Cancel"

[node name="AscendButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "‚¨ÜÔ∏è Ascend!"
